--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    
+    <distributionManagement>
+   <snapshotRepository>
+      <id>snapshots</id>
+     <name>Internal Snapshot Release</name>
+     <url>http://13.127.189.205:8081/repository/maven-snapshots/</url>
+   </snapshotRepository>
+</distributionManagement> 
     <plugins>
       <plugin>
         <!-- Build an executable JAR -->
